--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="google-adsense-account" content="ca-pub-7381421031784616">
-    <meta name="google-site-verification" content="D6PVEMV2CugLXYve0Ch3z6ya2NutEVWhAlFKj4csG3Y" />
+    <meta name="google-site-verification" content="D6PVEMV2CugLXYve0Ch3z6ya2NutEVWhAlFKj4csG3Y">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV Show Recommender | Find Your Next Binge</title>
