--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <header class="flex items-center space-x-3 p-4">
+  <img src="assets/logo.png" alt="PickMyBinge Logo" class="h-12 w-auto" />
+  <h1 class="text-2xl font-bold">PickMyBinge</h1>
+</header>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PickMyBinge.com - Find Your Next Binge-Worthy Show or Movie | Streaming Recommendations</title>
