--- a/index.html
+++ b/index.html
@@ -1205,16 +1205,17 @@
             <p>Try searching for "funny shows", "action movies", or "critically acclaimed series"</p>
         </div>
         
-        <footer>
-            <p>PickMyBinge.com &copy; 2023 - Find Your Next Favorite Binge</p>
-            <p class="api-source">This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
-            <nav aria-label="Footer navigation">
-                <a href="/privacy" style="color: var(--gray); margin: 0 10px;">Privacy Policy</a>
-                <a href="/terms" style="color: var(--gray); margin: 0 10px;">Terms of Service</a>
-                <a href="/contact" style="color: var(--gray); margin: 0 10px;">Contact Us</a>
-            </nav>
-        </footer>
-    </div>
+    <footer>
+    <p>PickMyBinge &copy; 2023 - Find Your Next Favorite Binge</p>
+    <p class="api-source">This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
+    <nav aria-label="Footer navigation">
+        <a href="tool/privacy.html" style="color: var(--gray); margin: 0 10px;">Privacy Policy</a>
+        <a href="tool/terms.html" style="color: var(--gray); margin: 0 10px;">Terms of Service</a>
+        <a href="tool/contact.html" style="color: var(--gray); margin: 0 10px;">Contact Us</a>
+    </nav>
+</footer>
+</div>
+
 
     <div class="toast" id="toast"></div>
 
