--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
             <p>PickMyBinge.com &copy; 2023 - Find Your Next Favorite Binge</p>
             <p class="api-source">This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
             <nav aria-label="Footer navigation">
-                <a href="tool/privacy.html" style="color: var(--gray); margin: 0 10px;">Privacy Policy</a>
+                <a href="privacy.html" style="color: var(--gray); margin: 0 10px;">Privacy Policy</a>
                 <a href="/terms" style="color: var(--gray); margin: 0 10px;">Terms of Service</a>
                 <a href="/contact" style="color: var(--gray); margin: 0 10px;">Contact Us</a>
             </nav>
