--- a/index.html
+++ b/index.html
@@ -1210,8 +1210,8 @@
             <p class="api-source">This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
             <nav aria-label="Footer navigation">
                 <a href="privacy.html" style="color: var(--gray); margin: 0 10px;">Privacy Policy</a>
-                <a href="/terms" style="color: var(--gray); margin: 0 10px;">Terms of Service</a>
-                <a href="/contact" style="color: var(--gray); margin: 0 10px;">Contact Us</a>
+                <a href="terms.html" style="color: var(--gray); margin: 0 10px;">Terms of Service</a>
+                <a href="contact.html" style="color: var(--gray); margin: 0 10px;">Contact Us</a>
             </nav>
         </footer>
     </div>
