--- a/contact.html
+++ b/contact.html
@@ -188,8 +188,8 @@
             <p>We'd love to hear from you!</p>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="terms.html">Terms of Service</a>
             </div>
         </div>
     </header>
