--- a/privacy.html
+++ b/privacy.html
@@ -155,8 +155,8 @@
             <p>Your privacy is important to us</p>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-                <a href="contact-us.html">Contact Us</a>
+                <a href="terms.html">Terms of Service</a>
+                <a href="contact.html">Contact Us</a>
             </div>
         </div>
     </header>
