--- a/terms.html
+++ b/terms.html
@@ -155,8 +155,8 @@
             <p>Please read these terms carefully before using our service</p>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="contact-us.html">Contact Us</a>
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="contact.html">Contact Us</a>
             </div>
         </div>
     </header>
