--- a/index.html
+++ b/index.html
@@ -991,22 +991,26 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="logo">
-                <i class="fas fa-popcorn logo-icon" aria-hidden="true"></i>
-            </div>
-            <h1>PickMyBinge.com</h1>
-            <p class="tagline">Discover your next favorite show or movie</p>
-            <p>Struggling to decide what to watch? We'll help you find the perfect entertainment for your mood.</p>
-            
-            <div class="api-status">
-                <div class="status-item">
-                    <span class="status-dot status-loading" id="tmdb-status"></span>
-                    <span>TMDB API</span>
-                </div>
-            </div>
-        </header>
+  <div class="container">
+    <header>
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/logo.png" alt="PickMyBinge Logo" width="150">
+        </a>
+      </div>
+
+      <h1>PickMyBinge.com</h1>
+      <p class="tagline">Discover your next favorite show or movie</p>
+      <p>Struggling to decide what to watch? We'll help you find the perfect entertainment for your mood.</p>
+
+      <div class="api-status">
+        <div class="status-item">
+          <span class="status-dot status-loading" id="tmdb-status"></span>
+          <span>TMDB API</span>
+        </div>
+      </div>
+    </header>
+
         
         <div class="search-container">
             <div class="search-box">
