--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
     <header>
       <div class="logo">
         <a href="index.html">
-          <img src="images/logo.png" alt="PickMyBinge Logo" width="150">
+          <img src="images/logo.png.png" alt="PickMyBinge Logo" width="150">
         </a>
       </div>
 
