--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="PickMyBinge Logo" width="150"></a>
+                <a href="index.html"><img src="logo.png" alt="PickMyBinge Logo" width="150"></a>
             </div>
             <h1>Find Your Next Binge-Worthy Show or Movie</h1>
             <p class="tagline">Instantly discover top-rated content across all your favorite genres</p>
