--- a/cringe.html
+++ b/cringe.html
@@ -97,7 +97,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png.png" alt="PickMyBinge Logo" width="150"></a>
+                <a href="index.html"><img src="logo.png.png" alt="PickMyBinge Logo" width="150"></a>
             </div>
             <h1>Cringiest Movies of All Time</h1>
             <p class="tagline">Discover the most hilariously bad, awkward, and "so bad they're good" films ever made.</p>
